feat: 보는 사용자에 따라 내 정보 디테일 수정 및 모달 구현

--- a/src/stories/Iconography.mdx
+++ b/src/stories/Iconography.mdx
@@ -108,6 +108,7 @@ SVG 아이콘을 위한 아이콘 갤러리
 </IconGallery>
 
 ### Display Icons
+
 <IconGallery>
   <IconItem name="warning">
     <Icon name="warning" />
@@ -117,6 +118,15 @@ SVG 아이콘을 위한 아이콘 갤러리
   </IconItem>
   <IconItem name="lock">
     <Icon name="lock" />
+  </IconItem>
+  <IconItem name="image">
+    <Icon name="img" />
+  </IconItem>
+  <IconItem name="image and video">
+    <Icon name="img-and-vid" />
+  </IconItem>
+  <IconItem name="video">
+    <Icon name="video" />
   </IconItem>
 </IconGallery>
 
